--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "marp -s ./slides --html",
+    "start": "pnpm build -s",
+    "build": "marp ./slides --html",
     "gen": "pnpm gen:demo_app && pnpm gen:single_server",
     "gen:demo_app": "docker run --rm -it -v $(pwd)/diagrams:/workdir craighurley/diagrams:1.0.2 diagrams demo_app.py",
     "gen:single_server": "docker run --rm -it -v $(pwd)/diagrams:/workdir craighurley/diagrams:1.0.2 diagrams single_server.py"
