--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -34,13 +34,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "18.x"
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 7
-          run_install: true
+      - name: Install
+        run: npm ci
       - name: Build
-        run: pnpm build
+        run: npm run build
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
